export enum EventType {
  CONCERT = 'CONCERT',
  CONFERENCE = 'CONFERENCE',
  SPORTS = 'SPORTS',
}
