export enum TicketStatus {
  VALID = 'VALID',
  USED = 'USED',
}
